[package]
name = "tree-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
petgraph = "0.6.5"
tree-sitter = "~0.23.0"
tree-sitter-fortran = { path = "../tree-sitter-fortran" }
tree-sitter-traversal = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
tree-sitter-cpp = "0.22.2"
fixedbitset = "0.4.0"

[features]
default = []
informational = []