[package]
name = "tree-graph"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
petgraph = "0.6.5"
tree-sitter = "0.24.4"
tree-sitter-fortran = { version = "0.2.0", git = "https://github.com/jcarlson23/tree-sitter-fortran.git" }
tree-sitter-traversal = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
tree-sitter-cpp = "~0.23.2"
fixedbitset = "0.4.0"

[features]
default = []
informational = []